--- a/index.html
+++ b/index.html
@@ -112,6 +112,24 @@
       </div>
     </div>
   </section>
+<section class="cinematic-break">
+  <div class="cinematic-inner">
+    <div class="cinematic-video">
+      <video autoplay muted loop playsinline preload="auto">
+        <source src="assets/logo.mp4" type="video/mp4" />
+      </video>
+    </div>
+
+    <div class="cinematic-text">
+      <h2>BREAK THE CHAIN.</h2>
+      <h3>BUILD HOPE.</h3>
+      <p>
+        A community token inspired by resilience, anti-bullying, and youth empowerment.
+      </p>
+      <a class="btn primary" href="#token">Continue → Token Reveal</a>
+    </div>
+  </div>
+</section>
 
   <!-- TOKEN REVEAL -->
   <section class="section dark" id="token">
