--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Barbour BRBR — Global Youth. Global Hope.</title>
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=7">
+<script src="script.js?v=7" defer></script>
   <meta name="description" content="Barbour BRBR — Anti-Bullying, Mental Health Support, Youth Development. Courage. Compassion. Community." />
 </head>
 
