--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@
     </video>
 
     <div class="hero-overlay"></div>
+    <canvas id="particles"></canvas>
 
-    <div class="hero-content">
+    <div class="hero-content">      
+    
+    <button class="sound-toggle" id="soundToggle" aria-label="Toggle sound">
+  🔇 Sound: OFF
+</button>
+
+ 
       <!-- logo.mp4 = small logo animation (NOT background) -->
       <div class="logo-wrap" aria-label="BRBR Logo Animation">
         <video class="logo-video" autoplay muted loop playsinline preload="auto">
