--- a/index.html
+++ b/index.html
@@ -1,262 +1,206 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Barbour BRBR — Global Youth. Global Hope.</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#070a0f" />
+  <title>BARBOUR BRBR — Global Youth. Global Hope.</title>
+  <meta name="description" content="BARBOUR BRBR — a community memecoin inspired by resilience: Supportive Web. Real help. Global Youth. Global Hope." />
 
-  <link rel="stylesheet" href="style.css?v=7">
-<script src="script.js?v=7" defer></script>
-  <meta name="description" content="Barbour BRBR — Anti-Bullying, Mental Health Support, Youth Development. Courage. Compassion. Community." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <!-- NAV -->
-  <nav class="nav">
-    <div class="nav-left">
-      <a class="brand" href="#top">
-        <span class="brand-dot"></span>
-        <span>BARBOUR BRBR</span>
-      </a>
-    </div>
-
-    <div class="nav-right">
-      <a class="nav-link" href="#story">Story</a>
-      <a class="nav-link" href="#token">Token</a>
-      <a class="nav-link" href="#help">Help</a>
-      <a class="nav-link" href="#contact">Contact</a>
-    </div>
-  </nav>
-
-  <!-- HERO (video background) -->
-  <section class="hero">
-
-  <video id="heroVideo"
-         class="hero-video"
-         autoplay
-         muted
-         loop
-         playsinline
-         preload="auto">
-    <source src="assets/hero-web.mp4" type="video/mp4">
+  <!-- CINEMATIC BACKGROUND VIDEO -->
+  <video id="bgVideo" class="bg-video" autoplay muted loop playsinline preload="auto">
+    <source src="assets/hero-web.mp4" type="video/mp4" />
   </video>
+  <div class="bg-vignette"></div>
+  <canvas id="particles" class="particles" aria-hidden="true"></canvas>
 
-  <div class="overlay"></div>
+  <!-- AUDIO LAYERS (start after user gesture) -->
+  <audio id="trailerAudio" src="assets/Hero.m4a" preload="auto" loop></audio>
+  <audio id="ambienceAudio" src="assets/atmosphere-sound-effect.mp3" preload="auto" loop></audio>
+  <audio id="uiClick" src="assets/Click.mp3" preload="auto"></audio>
 
-  <div class="hero-content fade-in">
-    <h1>
-      GLOBAL YOUTH.<br>
-      <span>GLOBAL HOPE.</span>
-    </h1>
-
-    <p>Turn silence into strength. Break the chain. Build hope.</p>
-
-    <button id="soundToggle">🔊 Sound</button>
-  </div>
-
-</section>
-  <script>
-const video = document.getElementById('heroVideo');
-const btn = document.getElementById('soundToggle');
-
-btn.addEventListener('click', () => {
-  video.muted = !video.muted;
-  btn.textContent = video.muted ? '🔊 Sound' : '🔇 Mute';
-});
-</script>
-
-
- 
-      <!-- logo.mp4 = small logo animation (NOT background) -->
-      <div class="logo-wrap" aria-label="BRBR Logo Animation">
-        <video class="logo-video" autoplay muted loop playsinline preload="auto">
-          <source src="assets/logo.mp4" type="video/mp4" />
-        </video>
-      </div>
-
-      <h1 class="headline">
-        <span class="line1">GLOBAL YOUTH.</span>
-        <span class="line2">GLOBAL HOPE.</span>
-      </h1>
-
-      <p class="sub">
-        Turn silence into strength. Break the chain. Build hope.
-      </p>
-
-      <div class="cta-row">
-        <a class="btn primary" href="#story">Watch the Story</a>
-        <a class="btn ghost" target="_blank" rel="noopener"
-           href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1">
-          Buy / Explore BRBR
-        </a>
-      </div>
-
-      <div class="mini-links">
-        <a target="_blank" rel="noopener" href="https://linktr.ee/barbourbrbr">Linktree</a>
-        <span>•</span>
-        <a target="_blank" rel="noopener"
-           href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1">
-          PancakeSwap
-        </a>
-        <span>•</span>
-        <a target="_blank" rel="noopener"
-           href="https://bscscan.com/address/0xf97522ABEf762d28729E073019343b72C6e8D2C1#cards">
-          BscScan
-        </a>
-      </div>
-
-      <div class="scroll-hint">Scroll ↓</div>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="brand">
+      <span class="dot"></span>
+      <span class="brand-name">BARBOUR BRBR</span>
     </div>
+
+    <nav class="nav">
+      <a href="index.html" class="nav-link is-active">Home</a>
+      <a href="association.html" class="nav-link">Association</a>
+      <a href="whitepaper.html" class="nav-link">Whitepaper</a>
+    </nav>
+
+    <button id="soundToggle" class="sound-toggle" aria-label="Toggle sound" title="Sound">
+      <span class="sound-ic" aria-hidden="true"></span>
+      <span class="sound-txt">SOUND OFF</span>
+    </button>
   </header>
 
-  <!-- STORY -->
-  <section class="section" id="story">
-    <div class="container split">
-      <div class="panel">
-        <h2>The Silence of Fear</h2>
-        <p class="lead">
-          Barbour BRBR is born from a real story — the kind many kids live in silence:
-          bullying, humiliation, abuse of power… until courage becomes a choice.
-        </p>
+  <!-- HERO -->
+  <main>
+    <section class="hero">
+      <div class="hero-inner">
+        <div class="hero-left">
+          <div class="kicker reveal">Supportive Web. Real Help.</div>
 
-        <div class="cards">
-          <div class="card">
-            <h3>1) Bullying in Silence</h3>
-            <p>When you’re scared to speak, scared to disturb, scared to say “no”.</p>
+          <h1 class="hero-title reveal">
+            <span class="white">GLOBAL YOUTH.</span><br />
+            <span class="green">GLOBAL HOPE.</span>
+          </h1>
+
+          <p class="hero-sub reveal">
+            Turn silence into strength. Break the chain. Build hope.
+          </p>
+
+          <div class="hero-cta reveal">
+            <a class="btn btn-primary" href="#story" data-click>
+              Watch the Story
+            </a>
+            <a class="btn btn-ghost" href="#token" data-click>
+              Buy / Explore BRBR
+            </a>
           </div>
-          <div class="card">
-            <h3>2) Fear & Isolation</h3>
-            <p>When pain becomes routine, and your voice disappears.</p>
+
+          <div class="hero-links reveal">
+            <a class="mini" href="#links" data-click>Linktree</a>
+            <span class="sep">•</span>
+            <a class="mini" href="#links" data-click>PancakeSwap</a>
+            <span class="sep">•</span>
+            <a class="mini" href="#links" data-click>BscScan</a>
           </div>
-          <div class="card">
-            <h3>3) Hope & Faith</h3>
-            <p>Believing one day justice comes — and choosing to become the solution.</p>
-          </div>
+
+          <div class="scroll-hint reveal" aria-hidden="true">Scroll ↓</div>
         </div>
 
-        <a class="btn primary" href="#token">Continue → Token Reveal</a>
+        <!-- Optional cinematic “orb” / logo placeholder -->
+        <div class="hero-right reveal">
+          <div class="orb">
+            <div class="orb-ring"></div>
+            <div class="orb-glow"></div>
+          </div>
+        </div>
       </div>
+    </section>
 
-      <div class="visual">
-        <img src="assets/story.png" alt="BRBR Story Visual" />
-        <div class="visual-glow"></div>
+    <!-- STORY -->
+    <section id="story" class="section">
+      <div class="section-inner">
+        <div class="section-head reveal">
+          <h2 class="section-title">The Silence of Fear</h2>
+          <p class="section-sub">
+            A story inspired by real silence — the kind many kids live in… until courage becomes a choice.
+          </p>
+        </div>
+
+        <div class="story-grid">
+          <div class="story-cards">
+            <div class="card reveal">
+              <h3>Silence</h3>
+              <p>Afraid to speak, afraid to disturb, afraid to say “no”.</p>
+            </div>
+            <div class="card reveal">
+              <h3>Isolation</h3>
+              <p>When fear becomes routine, your voice disappears.</p>
+            </div>
+            <div class="card reveal">
+              <h3>Faith</h3>
+              <p>One day justice comes — and choosing to act becomes the solution.</p>
+            </div>
+
+            <a class="btn btn-primary reveal" href="#token" data-click>
+              Continue → Token Reveal
+            </a>
+          </div>
+
+          <div class="story-poster reveal">
+            <img src="assets/story.png" alt="The Silence of Fear poster" loading="lazy" />
+            <div class="poster-glow"></div>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
-<section class="cinematic-break">
-  <div class="cinematic-inner">
-    <div class="cinematic-video">
-      <video autoplay muted loop playsinline preload="auto">
-        <source src="assets/logo.mp4" type="video/mp4" />
-      </video>
-    </div>
+    </section>
 
-    <div class="cinematic-text">
-      <h2>BREAK THE CHAIN.</h2>
-      <h3>BUILD HOPE.</h3>
-      <p>
-        A community token inspired by resilience, anti-bullying, and youth empowerment.
-      </p>
-      <a class="btn primary" href="#token">Continue → Token Reveal</a>
+    <!-- TOKEN REVEAL -->
+    <section id="token" class="section section-token">
+      <div class="section-inner">
+        <div class="token-grid">
+          <div class="token-left">
+            <h2 class="section-title reveal">BREAK THE CHAIN.<br><span class="green">BUILD HOPE.</span></h2>
+            <p class="section-sub reveal">
+              BARBOUR BRBR is a <b>community memecoin</b> inspired by resilience. A supportive web, real help,
+              and a global message: youth empowerment.
+            </p>
+
+            <div class="token-actions reveal">
+              <a class="btn btn-primary" href="#links" data-click>Explore BRBR</a>
+              <a class="btn btn-ghost" href="whitepaper.html" data-click>Read Whitepaper</a>
+            </div>
+
+            <div class="disclaimer reveal">
+              <b>Disclaimer:</b> This is a memecoin project. No financial advice. Do your own research.
+            </div>
+          </div>
+
+          <div class="token-right reveal">
+            <!-- LOGO VIDEO PANEL -->
+            <div class="video-panel">
+              <video id="logoVideo" class="logo-video" autoplay muted loop playsinline preload="metadata">
+                <source src="assets/logo-web.mp4" type="video/mp4" />
+              </video>
+              <div class="video-overlay">
+                <div class="tag">BRBR TOKEN • Cinematic Reveal</div>
+                <button class="btn btn-mini" id="replayLogo" data-click>Replay</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- LINKS -->
+    <section id="links" class="section section-links">
+      <div class="section-inner">
+        <div class="links-head reveal">
+          <h2 class="section-title">Supportive Web. Real Help.</h2>
+          <p class="section-sub">
+            Quick links to explore the project and community resources.
+          </p>
+        </div>
+
+        <div class="links-row">
+          <a class="pill reveal" href="#" data-click>Open Linktree</a>
+          <a class="pill reveal" href="#" data-click>PancakeSwap</a>
+          <a class="pill reveal" href="#" data-click>BscScan</a>
+          <a class="pill reveal" href="association.html" data-click>Youth Association</a>
+          <a class="pill reveal" href="whitepaper.html" data-click>Whitepaper</a>
+        </div>
+
+        <footer class="footer">
+          <div class="foot-left">BARBOUR BRBR<br><span>Global Youth. Global Hope.</span></div>
+          <div class="foot-right">© <span id="year"></span> BRBR</div>
+        </footer>
+      </div>
+    </section>
+  </main>
+
+  <!-- USER-GESTURE AUDIO PROMPT (hidden after click) -->
+  <div id="soundGate" class="sound-gate">
+    <div class="sound-gate-inner">
+      <div class="sound-gate-title">Enable Trailer Sound?</div>
+      <div class="sound-gate-sub">Browsers block autoplay audio. Click once to start cinematic sound.</div>
+      <button class="btn btn-primary" id="soundGateBtn" data-click>Enable Sound</button>
+      <button class="btn btn-ghost" id="soundGateSkip" data-click>Keep Silent</button>
     </div>
   </div>
-</section>
-
-  <!-- TOKEN REVEAL -->
-  <section class="section dark" id="token">
-    <div class="container">
-      <div class="token-top">
-        <h2>BARBOUR BRBR: Empowering the Future, Defiantly.</h2>
-        <p class="lead">
-          Anti-Bullying • Mental Health Support • Youth Development
-        </p>
-      </div>
-
-      <div class="pill-row">
-        <span class="pill">Courage</span>
-        <span class="pill">Compassion</span>
-        <span class="pill">Community</span>
-      </div>
-
-      <div class="token-actions">
-        <a class="btn primary" target="_blank" rel="noopener"
-           href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1">
-          Open PancakeSwap
-        </a>
-
-        <a class="btn ghost" target="_blank" rel="noopener"
-           href="https://bscscan.com/address/0xf97522ABEf762d28729E073019343b72C6e8D2C1#cards">
-          Verify on BscScan
-        </a>
-      </div>
-
-      <div class="copybox">
-        <div class="copyline">
-          <span class="label">Token address</span>
-          <code id="tokenAddress">0xf97522ABEf762d28729E073019343b72C6e8D2C1</code>
-        </div>
-        <button class="copybtn" id="copyBtn" type="button">Copy</button>
-      </div>
-
-      <p class="tiny">
-        Built for good: a community-driven project supporting youth worldwide.
-      </p>
-    </div>
-  </section>
-
-  <!-- HELP / RESOURCES -->
-  <section class="section" id="help">
-    <div class="container">
-      <h2>Supportive Web. Real Help.</h2>
-      <p class="lead">
-        This is a safe place for stories, support, and action. If you’re living bullying,
-        moral harassment, family violence, or abuse — you are not alone.
-      </p>
-
-      <div class="cards three">
-        <div class="card">
-          <h3>Share Your Story</h3>
-          <p>Anonymous stories coming next. Your voice matters.</p>
-        </div>
-        <div class="card">
-          <h3>Youth Association (Coming)</h3>
-          <p>A global space for resources, support, and real help.</p>
-        </div>
-        <div class="card">
-          <h3>Build Hope</h3>
-          <p>Turn pain into strength. Help someone else stand up.</p>
-        </div>
-      </div>
-
-      <div class="cta-row">
-        <a class="btn primary" target="_blank" rel="noopener" href="https://linktr.ee/barbourbrbr">Open Linktree</a>
-        <a class="btn ghost" href="#contact">Contact</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT -->
-  <footer class="footer" id="contact">
-    <div class="container footer-inner">
-      <div>
-        <div class="footer-title">BARBOUR BRBR</div>
-        <div class="footer-sub">Global Youth. Global Hope.</div>
-      </div>
-
-      <div class="footer-links">
-        <a target="_blank" rel="noopener" href="https://linktr.ee/barbourbrbr">Linktree</a>
-        <a target="_blank" rel="noopener"
-           href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1">PancakeSwap</a>
-        <a target="_blank" rel="noopener"
-           href="https://bscscan.com/address/0xf97522ABEf762d28729E073019343b72C6e8D2C1#cards">BscScan</a>
-      </div>
-
-      <div class="footer-contact">
-        <a href="mailto:contact@barbourbrbr.xyz">contact@barbourbrbr.xyz</a>
-        <div class="tiny">© <span id="year"></span> Barbour BRBR</div>
-      </div>
-    </div>
-  </footer>
 
   <script src="script.js"></script>
 </body>
