--- a/association.html
+++ b/association.html
@@ -1,48 +1,96 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BRBR Youth Association</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>BRBR — Youth Association</title>
+  <meta name="description" content="BRBR Youth Association (Coming). Support resources, stories, and real help." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
 
-<header class="section" style="padding-top:50px">
-  <div class="container">
-    <h2>BRBR Youth Association</h2>
-    <p class="lead">
-      A global support initiative for youth: anti-bullying, mental health, education,
-      child protection, and family unity.
-    </p>
+<body class="page">
+  <video class="bg-video" autoplay muted loop playsinline preload="auto">
+    <source src="assets/hero-web.mp4" type="video/mp4" />
+  </video>
+  <div class="bg-vignette"></div>
+  <canvas id="particles" class="particles" aria-hidden="true"></canvas>
 
-    <div class="story-grid">
-      <div class="card">
-        <h3>Support Resources</h3>
-        <p>Guides, contacts, safe steps for victims and families.</p>
-      </div>
-      <div class="card">
-        <h3>Animated Story Series</h3>
-        <p>True episodes to help others recognize abuse and speak up.</p>
-      </div>
-      <div class="card">
-        <h3>Real-World Action</h3>
-        <p>Community programs, partnerships, and youth support plans.</p>
-      </div>
+  <audio id="trailerAudio" src="assets/Hero.m4a" preload="auto" loop></audio>
+  <audio id="ambienceAudio" src="assets/atmosphere-sound-effect.mp3" preload="auto" loop></audio>
+  <audio id="uiClick" src="assets/Click.mp3" preload="auto"></audio>
+
+  <header class="header">
+    <div class="brand">
+      <span class="dot"></span>
+      <span class="brand-name">BARBOUR BRBR</span>
     </div>
 
-    <div style="text-align:center; margin-top:30px">
-      <a class="btn primary" href="https://linktr.ee/barbourbrbr" target="_blank" rel="noopener">
-        Donate / Support (Linktree)
-      </a>
-      <a class="btn" href="index.html">Back to Home</a>
-    </div>
+    <nav class="nav">
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="association.html" class="nav-link is-active">Association</a>
+      <a href="whitepaper.html" class="nav-link">Whitepaper</a>
+    </nav>
 
-    <p class="tiny" style="text-align:center; margin-top:18px">
-      Contact: <a href="mailto:contact@barbourbrbr.xyz">contact@barbourbrbr.xyz</a>
-    </p>
+    <button id="soundToggle" class="sound-toggle" aria-label="Toggle sound" title="Sound">
+      <span class="sound-ic" aria-hidden="true"></span>
+      <span class="sound-txt">SOUND OFF</span>
+    </button>
+  </header>
+
+  <main>
+    <section class="page-hero">
+      <div class="page-inner">
+        <div class="kicker reveal">Supportive Web. Real Help.</div>
+        <h1 class="page-title reveal">Youth Association <span class="green">(Coming)</span></h1>
+        <p class="page-sub reveal">
+          A future space for resources, support, and action — for young people facing bullying, harassment,
+          family violence, or abuse. You are not alone.
+        </p>
+
+        <div class="page-grid">
+          <div class="card reveal">
+            <h3>Share Your Story</h3>
+            <p>Anonymous stories (coming). Your voice matters — your experience can help others.</p>
+          </div>
+          <div class="card reveal">
+            <h3>Resources & Guidance</h3>
+            <p>Practical steps, safe contacts, and support pathways. Real help, clear options.</p>
+          </div>
+          <div class="card reveal">
+            <h3>Community Action</h3>
+            <p>Positive initiatives, mentoring, awareness campaigns, and partnerships.</p>
+          </div>
+        </div>
+
+        <div class="page-actions reveal">
+          <a class="btn btn-primary" href="index.html#links" data-click>Open Linktree</a>
+          <a class="btn btn-ghost" href="whitepaper.html" data-click>Read Whitepaper</a>
+        </div>
+
+        <div class="disclaimer reveal">
+          <b>Note:</b> BRBR is a <b>memecoin community project</b>. Association features are a roadmap initiative.
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer footer-page">
+      <div class="foot-left">BARBOUR BRBR<br><span>Global Youth. Global Hope.</span></div>
+      <div class="foot-right">© <span id="year"></span> BRBR</div>
+    </footer>
+  </main>
+
+  <div id="soundGate" class="sound-gate">
+    <div class="sound-gate-inner">
+      <div class="sound-gate-title">Enable Trailer Sound?</div>
+      <div class="sound-gate-sub">Click once to unlock audio (browser policy).</div>
+      <button class="btn btn-primary" id="soundGateBtn" data-click>Enable Sound</button>
+      <button class="btn btn-ghost" id="soundGateSkip" data-click>Keep Silent</button>
+    </div>
   </div>
-</header>
 
+  <script src="script.js"></script>
 </body>
 </html>
